steps are now aligned, need to fix styling a bit

--- a/src/components/ExerciseList.css
+++ b/src/components/ExerciseList.css
@@ -1,8 +1,17 @@
 .exercises {
     padding: 20px; 
 }
-  
-.step-container {
-    margin-bottom: 10px; 
+
+.grid {
+    display: grid;
+    grid-template: 1fr / 1fr;
+    place-items: center;
+    text-align: left;
 }
-  
+
+.stepsGrid {
+    display: grid;
+    grid-template: 1fr / 1fr;
+    text-align: left;
+}
+
